Revision history for String-UnicodeUTF8

0.21  ???
    - make unicode \x{} zero padded to avoid ambiguity

0.2  Sun Jul 14 20:13:37 2013
       Moar info in POD

0.1  Thu Nov  1 23:05:47 2012
       Initial release.