@@ -10,10 +10,10 @@ WriteMakefile(
     PL_FILES      => {},
     LICENSE       => 'perl',
     PREREQ_PM     => {
-        'Test::More'          => 0,    # for testing, I know I know: Test::XT
+        'Test::More'          => 0,     # for testing, I know I know: Test::XT
         'String::Unquotemeta' => 0,
-        'Module::Want'        => 0,
-        'B::Flags'            => 0,    # make optional?
+        'Module::Want'        => 0.6,
+        'B::Flags'            => 0,     # make optional?
     },
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean => { FILES    => 'String-UnicodeUTF8-*' },
